panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__arrays__test_empty_initialisation_of_array_that_fits_in_register.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/arrays/test_empty_initialisation_of_array_that_fits_in_register.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/arrays/test_empty_initialisation_of_array_that_fits_in_register.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration a1~2 `array<char; 1>` (braced ∅))
         (declaration a2~3 `array<char; 2>` (braced ∅))
         (declaration a3~4 `array<char; 3>` (braced ∅))
         (declaration a4~5 `array<char; 4>` (braced ∅))
         (declaration a5~6 `array<char; 5>` (braced ∅))
         (declaration a6~7 `array<char; 6>` (braced ∅))
         (declaration a7~8 `array<char; 7>` (braced ∅))
         (declaration a8~9 `array<char; 8>` (braced ∅))
         (declaration b1~10 `array<short; 1>` (braced ∅))
         (declaration b2~11 `array<short; 2>` (braced ∅))
         (declaration b3~12 `array<short; 3>` (braced ∅))
         (declaration b4~13 `array<short; 4>` (braced ∅))
         (declaration c1~14 `array<int; 1>` (braced ∅))
         (declaration c2~15 `array<int; 2>` (braced ∅))
         (declaration d1~16 `array<long; 1>` (braced ∅)))))

----- stderr -----
