panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__arrays__test_multidimensional_array_size.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/arrays/test_multidimensional_array_size.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/arrays/test_multidimensional_array_size.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition
      main~1 `fn(∅: int, argv: ptr<ptr<char>>) -> int`
      (params
         main.unnamed_parameter.0~3 `int`
         argv~4 `ptr<ptr<char>>`)
      (compound-statement
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (subscript (name argv~4 `ptr<ptr<char>>`) 1)
               (sizeof `array<array<int; 500>; 200>`)))
         (declaration xs~5 `array<array<int; 3>; 5>` ∅)
         (return (sizeof (name xs~5 `array<array<int; 3>; 5>`))))))

----- stderr -----
