panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__arrays__test_single_dimensional_array_length.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/arrays/test_single_dimensional_array_length.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/arrays/test_single_dimensional_array_length.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration xs~2 `array<long; 42>` ∅)
         (return (lengthof (name xs~2 `array<long; 42>`))))))

----- stderr -----
