panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__arrays__test_sizeof_in_array_length.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/arrays/test_sizeof_in_array_length.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/arrays/test_sizeof_in_array_length.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (declaration cs~3 `array<char; (sizeof 0)>` ∅)
         (declaration xs~4 `array<int; (sizeof `array<int; 2>`)>` ∅)
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%zu %zu\n")
               (lengthof (name cs~3 `array<char; (sizeof 0)>`))
               (lengthof (name xs~4 `array<int; (sizeof `array<int; 2>`)>`)))))))

----- stderr -----
